--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://${{ secrets.AWS_BUCKET}} --delete --exclude ".git/*" --exclude ".github/*"
+          aws s3 sync . s3://mini-lab-cicd-tonnom --delete --exclude ".git/*" --exclude ".github/*"
