--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.ACCES_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_USER_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_USER_KEY }}
+          aws-secret-access-key: ${{ secrets.ACCES_KEY }}
           aws-region: eu-north-1
 
       - name: Deploy to S3
